# py-statsd-min

./: .gitignore  LICENSE  README  README.md  TODO  TODO.md  pyproject.toml  server.py  statsd-server.py
py_statsd_min/: __init__.py  server.py
tests/: test-server.py  test_server.py
