[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-statsd-min"
version = "0.1.0"
description = "A minimal Python implementation of Etsy's statsD."
readme = "README.md"
authors = [ { name = "Jesse Blomberg" } ]
license = { file = "LICENSE" }
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest"]

[tool.hatch.build]
packages = ["py_statsd_min"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
